# spark-bowl

./: .gitignore  README.md
.venv-spark-mac/: pip-selfcheck.json
alexa/: intent-example.json  intent.json
lambda/: README.md  build-and-upolad-bundle.yml  build-deploy-bundle.sh  index.py
lambda/infra/: build-deploy-bundle.sh  build-env-playbook.yml  create-config-playbook.yml  create-lambda-stack.yml  data-stack-playbook.yml  deploy-lambda-playbook.yml  development-playbook.yml  sparkabowl-data-stack.yml.cform  sparkabowl-lambda.yml.cform  upload-config-playbook.yml
lambda/infra/cfn/: config-stack.yml.cform  data-stack.yml.cform  lambda-stack.yml.cform
lambda/infra/requirements/: base.txt  local.txt
lambda/infra/tasks/: deploy-tasks.yml  virtualenv-tasks.yml
lambda/infra/vars/: config-stack-vars.yml  deploy-vars.yml  lambda.yml  s3-info.yml
lambda/spark-router/: app.py
lambda/spark-router/.chalice/: config.json
lambda/src/: Dockerfile  auxiliary.py  index.py  requirements.txt  tests.py
raspberry/: downloads3.go  http1.go  http2.go  provision-pi-playbook.yml  ssh-pi.sh
raspberry/ansible/: deploy-playbook.yml  development-playbook.yml  hosts  provision-pi-playbook.yml  provision-pi.sh
raspberry/ansible/files/: get-stack.sh
raspberry/ansible/templates/: aws-credentials.j2
raspberry/ansible/vars/: common-vars.yml  pi-vault.yml
raspberry/go-server/: Gopkg.toml  downloads3.go  logging.go  message.go  run-server.sh  server.go  sparkabowl_test.go
raspberry/haskell-server/.stack-work/install/x86_64-osx/lts-7.19/8.0.1/flag-cache/: aeson-0.11.3.0-HABukI0brwVDL6VV4zjsTw  aeson-pretty-0.8.2-6T65DH6FNXY2s1rWpm4jxk  ansi-terminal-0.6.2.3-448ipfN5j28Ha0AgPiJmdI  ansi-wl-pprint-0.6.7.3-LVnipygDrAR1FEMFhjxcQX  (+82 more)
raspberry/rpi-server/: rpi-server.cabal
raspberry/rpi-server/src/: Lib.hs  RPIO.hs  ServerAPI.hs  Types.hs
(+2 files in other folders)
