name:                rpi-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/rpi-server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       RPIO
                     , ServerAPI
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , base-compat
                     , bytestring
                     , exceptions
                     , hpio
                     , lucid
                     , mtl
                     , servant-server
                     , string-conversions
                     , text
                     , time
                     , wai
                     , warp
  default-language:    Haskell2010

executable rpi-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rpi-server
  default-language:    Haskell2010

test-suite rpi-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rpi-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/rpi-server
